--- a/package.json
+++ b/package.json
@@ -42,5 +42,5 @@
             "last 1 safari version"
         ]
     },
-    "homepage": "https://romo43.github.io/Fernando_Romo.github.io/"
+    "homepage": "https://romo43.github.io/react-portfolio"
 }
